# roughpy-jax

./: CMakeLists.txt  LICENSE.txt  README.md  pyproject.toml
.devcontainer/: Dockerfile  README.md  devcontainer.json
.github/workflows/: release.yml  tests.yml
examples/: README.md  words.py
roughpy_jax/: CMakeLists.txt  algebra.py  bases.py  dense_algebra.py  ops.py  strategies.py
roughpy_jax/src/: roughpy_jax_module.c
roughpy_jax/src/cpu/: dense_ft_adj_mul.cpp  dense_ft_antipode.cpp  dense_ft_exp.cpp  dense_ft_fma.cpp  dense_ft_fmexp.cpp  dense_ft_log.cpp  dense_st_adj_mul.cpp  dense_st_fma.cpp  xla_common.hpp
roughpy_jax/streams/: lie_increment_stream.py  piecewise_abelian_stream.py
roughpy_jax/tests/: test_bases.py  test_dyadic_query.py  test_ft_mul_adj.py  test_st_mul.py
roughpy_jax/tests/streams/: test_piecewise_abelian_stream.py
